# vulcan

./: .envrc  .gitignore  .slice2-plan.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  Cargo.toml  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  config.example.toml  config.toml  deny.toml  flake.nix  story.md  test-rendering.md
.agents/: ORIGINAL_REQUEST.md
.agents/orchestrator/: BRIEFING.md  context.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/teamwork_preview_explorer_analysis/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_worker_tui_fixes/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/teamwork_preview_worker_tui_fixes_replace_1/: progress.md
.claude/: settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: intelligence.cjs  statusline.cjs
.config/: nextest.toml
.github/workflows/: bench.yml  ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/tmp/: docs-work-manifest.json
.serena/: project.yml
.symphony/tasks/: symphony-workflow-builder.md  test-workflow.md  triage-github-issues.md  update-github-issues.md
.symphony/workflows/: forgehand-implementer.md  symphony-workflow-builder.md  test-workflow.md  triage-github-issues.md  update-github-issues.md
.tangled/workflows/: ci.yaml
benches/: agent_core.rs  soak.rs  tui_render.rs
benches/baselines/: README.md
benches/common/: results.rs
docs/: refactor-daemon-architecture.md  tui-terminal-architecture.md
docs/adr/: 0001-daemon-required-frontends.md  0002-shared-runtime-resource-pool.md  0003-extension-daemon-frontend-split.md  0004-extension-distribution-and-lifecycle.md  0005-extension-compaction-control.md  0006-durable-scheduler-overlap-policy.md  0006-extension-details-replay-and-frontend-rendering.md  0007-extension-frontend-events-and-status-widgets.md  0007-symphony-workflow-contract.md  0008-symphony-typed-config.md
docs/agents/: backlog.md  domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: overview.md
docs/configuration/: overview.md
docs/features/: README.md  agentic-extensions.md  developer-experience.md  ecosystem-integrations.md  extension-runtime-trust-ladder.md  extension-store.md  extensions.md  governance-safety.md  marketplace-discovery.md  mcp-as-extension.md  mcp-server-support.md  persistence-stateful-extensions.md  skills.sh.md  ux-extensions.md
docs/guides/: development.md  getting-started.md
docs/plans/: 2026-04-26-tui-virtualized-chat-renderer-implementation-plan.md  2026-04-28-daemon-architecture-implementation-plan.md  2026-04-30-runtime-resource-pool-implementation-plan.md  2026-05-03-observability-runtime-metrics.md
docs/reference/: api.md  deep-research-report.md  external-inference-recipes.md  first-party-extension-catalog.md  openai-symphony.md  operability-trust-contracts.md  provider-capability-matrix.md  provider-router-research.md  renderer-latex-decision.md  renderer-parser-spike.md
docs/runtime/: overview.md
docs/testing/: overview.md  renderer-pipeline-v1.md
scripts/: bench-diff.py  median-of-3.py
skills/: debug.md
skills/debug/: SKILL.md
skills/vulcan-cli-config/: SKILL.md
src/: agent.rs  cli.rs  cli_artifact.rs  cli_auth.rs  cli_config.rs  cli_context_pack.rs  cli_cortex.rs  cli_extension.rs  cli_gateway.rs  cli_impact.rs  cli_knowledge.rs  cli_model.rs  cli_playbook.rs  cli_policy.rs  cli_provider.rs  cli_replay.rs  cli_review.rs  cli_run.rs  cli_symphony.rs  cli_trust.rs  config.rs  config_registry.rs  context.rs  lib.rs  main.rs  memory.rs  observability.rs  pause.rs  prompt_builder.rs  runtime_pool.rs  tui.rs
src/agent/: CONTEXT.md  dispatch.rs  mod.rs  provider.rs  run.rs  session.rs  skills.rs  tests.rs  turn.rs
src/artifact/: mod.rs
src/client/: auto_start.rs  errors.rs  mod.rs  transport.rs
src/code/: embed.rs  graph.rs  lsp.rs  mod.rs
src/config/: mod.rs  tests.rs
src/context_pack/: mod.rs
src/daemon/: CONTEXT.md  cli.rs  config_watch.rs  dispatch.rs  eviction.rs  install.rs  lifecycle.rs  lifecycle_tests.rs  mod.rs  protocol.rs  protocol_tests.rs  server.rs  session.rs  session_agent.rs  state.rs  subagent.rs
src/db/: mod.rs
src/doctor/: mod.rs
src/extensions/: CONTEXT.md  api.rs  audit.rs  config_field.rs  draft.rs  install_state.rs  manifest.rs  mod.rs  policy.rs  registry.rs  repository.rs  runtime.rs  state.rs  store.rs  verify.rs  wasm.rs
src/gateway/: CONTEXT.md  agent_map.rs  commands.rs  daemon_client.rs  discord.rs  lane.rs  lane_router.rs  loopback.rs  mod.rs  outbound.rs  queue.rs  queue_turso.rs  registry.rs  scheduler.rs  (+8 more)
tests/: agent_loop.rs  client_autostart.rs  contracts.rs  daemon_e2e.rs  extensions_todo_e2e.rs  frontend_extensions.rs  gateway_no_agent_map.rs  mcp_bridge.rs
vulcan/: Cargo.toml  README.md
vulcan-core-ext-safety/: Cargo.toml  README.md
vulcan-core-ext-safety/src/: lib.rs
vulcan-core-ext-skills/: Cargo.toml  README.md
vulcan-core-ext-skills/src/: lib.rs
vulcan-ext-auto-commit/: Cargo.toml  README.md
vulcan-ext-auto-commit/src/: lib.rs
vulcan-ext-compact-summary/: Cargo.toml  README.md
vulcan-ext-compact-summary/src/: lib.rs
vulcan-ext-input-demo/: Cargo.toml  README.md
vulcan-ext-input-demo/src/: lib.rs
vulcan-ext-provider-demo/: Cargo.toml
vulcan-ext-provider-demo/src/: lib.rs
vulcan-ext-snake/: Cargo.toml  README.md
vulcan-ext-snake/src/: lib.rs
vulcan-ext-spinner-demo/: Cargo.toml  README.md
vulcan-ext-spinner-demo/src/: lib.rs  tui.rs
vulcan-ext-todo/: Cargo.toml  README.md
vulcan-ext-todo/src/: lib.rs  tui.rs
vulcan-ext-todo/tests/: todo_e2e.rs
vulcan-extension-macros/: Cargo.toml  README.md
vulcan-frontend-api/: Cargo.toml  README.md
vulcan-frontend-api/src/: lib.rs
vulcan-tui/: Cargo.toml  README.md
vulcan-tui/src/: main.rs
vulcan/src/: main.rs
wiki/: README.md
(+158 files in other folders)
