[package]
name = "vulcan"
version = "0.1.0"
edition = "2024"
description = "A Rust AI agent — forged at the forge, tested by fire"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"
readme = "README.md"
# benches/soak.rs is the vulcan-soak [[bin]]; disable auto-discovery so cargo
# doesn't also register it as a bench target (which would conflict with the
# explicit [[bin]] declaration).
autobenches = false

[features]
default = []
# Enabled only when running the soak binary. Pulls in dhat-rs (heap
# profiler that swaps the global allocator) and hdrhistogram (latency
# percentiles) — both optional so production builds skip them entirely.
bench-soak = ["dep:dhat", "dep:hdrhistogram"]
gateway = ["dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / LLM API
reqwest = { version = "0.13", features = ["json", "stream"] }

# Async trait support (needed for dyn-compatible tool/provider traits)
async-trait = "0.1"

# Stream processing for SSE responses
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# CLI + TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
strsim = "0.11.1"
portable-pty = "0.9.0"
# Pure-Rust git plumbing (YYC-36). Used today only for repository
# discovery — write ops dispatch through the `git` binary because gix's
# commit/push surfaces are still maturing and a hybrid keeps the tool
# semantics predictable. Plan: migrate one tool at a time.
gix = "0.82"

# Code intelligence (YYC-45). Tree-sitter parses without per-language
# servers; grammars are statically linked (binary cost is the price for
# zero runtime deps). Versions verified against crates.io latest stable.
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-json = "0.24.8"

# LSP types (YYC-46). Hand-rolled JSON-RPC framing over stdio; this
# crate just provides the structured messages so we don't reinvent
# textDocument/* bodies. Verified at crates.io latest stable.
lsp-types = "0.97"

# Workspace walker that respects .gitignore (YYC-50). Used by the
# code-graph indexer so we don't index target/, node_modules/, etc.
ignore = "0.4.25"

# Gateway daemon HTTP stack. Optional — only linked under `gateway`.
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", features = ["util"], optional = true }
tower-http = { version = "0.6.8", features = ["trace", "cors"], optional = true }

# Heap profiler for the soak binary. Optional — only linked under `bench-soak`.
dhat = { version = "0.3", optional = true }

# HDR histogram for soak-binary latency percentiles. Optional — only linked
# into the runtime crate under `bench-soak`. (Also listed in
# `[dev-dependencies]` so divan benches running under `cargo test` /
# `cargo bench` can use it without enabling the feature.)
hdrhistogram = { version = "7", optional = true }

[profile.release]
opt-level = "z"    # optimize for size
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
divan = "0.1"
hdrhistogram = "7"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "tui_render"
harness = false

[[bench]]
name = "agent_core"
harness = false

[[bin]]
name = "vulcan-soak"
path = "benches/soak.rs"
required-features = ["bench-soak"]
