[package]
name = "vulcan"
version = "0.1.0"
edition = "2024"
description = "A Rust AI agent — forged at the forge, tested by fire"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"
readme = "README.md"
# benches/soak.rs is the vulcan-soak [[bin]]; disable auto-discovery so cargo
# doesn't also register it as a bench target (which would conflict with the
# explicit [[bin]] declaration).
autobenches = false
# `cargo run` (no args) defaults to the main `vulcan` binary so quick
# iteration doesn't require `--bin vulcan`. The bench/soak targets stay
# explicit.
default-run = "vulcan"

[features]
default = []
# Enabled only when running the soak binary. Pulls in dhat-rs (heap
# profiler that swaps the global allocator) and hdrhistogram (latency
# percentiles) — both optional so production builds skip them entirely.
bench-soak = ["dep:dhat", "dep:hdrhistogram"]
gateway = [
    "dep:axum",
    "dep:tower",
    "dep:subtle",
    "dep:hmac",
    "dep:sha2",
    "dep:serenity",
    "dep:r2d2",
    "dep:r2d2_sqlite",
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / LLM API
reqwest = { version = "0.13", features = ["json", "stream"] }

# Async trait support (needed for dyn-compatible tool/provider traits)
async-trait = "0.1"

# Stream processing for SSE responses
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.23"

# CLI + TUI
clap = { version = "4", features = ["derive"] }
# Interactive prompts for `vulcan auth` (YYC-100). Fuzzy select +
# password input + confirm modals. Optional dep — only the auth flow
# uses it, but cheap enough to leave in default deps.
dialoguer = { version = "0.12", features = ["fuzzy-select", "password"] }
ratatui = "0.30"
crossterm = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
strsim = "0.11.1"
portable-pty = "0.9.0"
# Pure-Rust git plumbing (YYC-36). Used today only for repository
# discovery — write ops dispatch through the `git` binary because gix's
# commit/push surfaces are still maturing and a hybrid keeps the tool
# semantics predictable. Plan: migrate one tool at a time.
gix = "0.82"

# Code intelligence (YYC-45). Tree-sitter parses without per-language
# servers; grammars are statically linked (binary cost is the price for
# zero runtime deps). Versions verified against crates.io latest stable.
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-json = "0.24.8"

# LSP types (YYC-46). Hand-rolled JSON-RPC framing over stdio; this
# crate just provides the structured messages so we don't reinvent
# textDocument/* bodies. Verified at crates.io latest stable.
lsp-types = "0.97"

# Workspace walker that respects .gitignore (YYC-50). Used by the
# code-graph indexer so we don't index target/, node_modules/, etc.
ignore = "0.4.25"

# Gateway daemon HTTP stack. Optional — only linked under `gateway`.
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", features = ["util"], optional = true }
subtle = { version = "2.6.1", optional = true }
# Webhook HMAC verification (Task 16). hmac 0.12 + sha2 0.10 share `digest 0.10`,
# already in Cargo.lock transitively — picking the matching majors avoids
# pulling a second copy of `digest`.
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "http", "model", "rustls_backend"], optional = true }
# Connection pool for the gateway daemon's SQLite store (YYC-113). Replaces
# the global Arc<Mutex<Connection>> that serialized every concurrent agent
# lane through one lock. Versions verified at crates.io latest stable.
r2d2 = { version = "0.8.10", optional = true }
r2d2_sqlite = { version = "0.33.0", optional = true }

# `http` types are shared between axum and the `Platform` trait method
# `verify_webhook`. Promoted to a direct, NON-feature-gated dep so the trait
# signature compiles in builds without the `gateway` feature too.
http = "1.4.0"

# Heap profiler for the soak binary. Optional — only linked under `bench-soak`.
dhat = { version = "0.3", optional = true }

# HDR histogram for soak-binary latency percentiles. Optional — only linked
# into the runtime crate under `bench-soak`. (Also listed in
# `[dev-dependencies]` so divan benches running under `cargo test` /
# `cargo bench` can use it without enabling the feature.)
hdrhistogram = { version = "7", optional = true }

# Workspace lint baseline (YYC-121). Conservative defaults that bias
# toward forward-leaning warnings without forcing a sprawling cleanup
# of pre-existing patterns (TUI rendering helpers with many args, test
# scaffolding that mutates a Default::default()). Tighten these as
# follow-ups; primary goal is to make new code land consistent and
# get clippy gated in CI.
[lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[lints.clippy]
# Common but noisy in this crate. Allowed at the baseline; revisit
# per-call-site as those code paths get refactored.
too_many_arguments = "allow"
field_reassign_with_default = "allow"
doc_overindented_list_items = "allow"
# `&PathBuf` / `&String` parameters are technically slower than `&Path`
# / `&str`, but the call sites are TUI/CLI scaffolding where the cost
# is negligible. Allow until those modules get a focused pass.
ptr_arg = "allow"
# Builder-style helpers in tests (`Default::default()` then mutate)
# trip large_enum_variant in error paths; allow at baseline.
large_enum_variant = "allow"

[profile.release]
opt-level = "z"    # optimize for size
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
divan = "0.1"
hdrhistogram = "7"
tokio = { version = "1", features = ["full", "test-util"] }
# Snapshot testing for prompt builder + TUI render output (YYC follow-up).
# Pinned to crates.io latest stable; default features sufficient.
insta = "1.47.2"

[[bench]]
name = "tui_render"
harness = false

[[bench]]
name = "agent_core"
harness = false

[[bin]]
name = "vulcan-soak"
path = "benches/soak.rs"
required-features = ["bench-soak"]
