[workspace]
# GH issue #549: cargo-crate extension distribution model. Root
# package stays as `vulcan-core` (current `src/`); new bins/extensions
# live in sibling member crates.
members = [
    ".",
    "vulcan",
    "vulcan-tui",
    "vulcan-frontend-api",
    "vulcan-extension-macros",
    "vulcan-core-ext-skills",
    "vulcan-core-ext-safety",
    "vulcan-ext-auto-commit",
    "vulcan-ext-compact-summary",
    "vulcan-ext-snake",
    "vulcan-ext-input-demo",
    "vulcan-ext-spinner-demo",
    "vulcan-ext-todo",
]
resolver = "2"

[package]
name = "vulcan-core"
version = "0.1.0"
edition = "2024"
description = "A Rust AI agent — forged at the forge, tested by fire"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"
readme = "README.md"
# benches/soak.rs is the vulcan-soak [[bin]]; disable auto-discovery so cargo
# doesn't also register it as a bench target (which would conflict with the
# explicit [[bin]] declaration).
autobenches = false

# Keep the in-source crate name as `vulcan` so existing `use vulcan::*`
# imports across the codebase, tests, and benches continue to compile
# unchanged after the workspace split.
[lib]
name = "vulcan"
path = "src/lib.rs"

[features]
default = ["daemon"]
# Long-lived `vulcan daemon` process + Unix-socket frontend (YYC-266
# Slice 0). Default-on so the standard CLI/TUI binary ships with the
# daemon entry point wired in; gated as a feature so embedders / minimal
# builds can opt out.
daemon = ["dep:notify", "dep:nix"]
# Enabled only when running the soak binary. Pulls in dhat-rs (heap
# profiler that swaps the global allocator) and hdrhistogram (latency
# percentiles) — both optional so production builds skip them entirely.
bench-soak = ["dep:dhat", "dep:hdrhistogram"]
# YYC-266 Slice 3 Task 3.4: gateway now routes prompts through the
# in-tree daemon Client, so it implies `daemon` (which gates `client`
# and `daemon`).
gateway = [
    "daemon",
    "dep:axum",
    "dep:tower",
    "dep:subtle",
    "dep:hmac",
    "dep:serenity",
    "dep:r2d2",
    "dep:r2d2_sqlite",
]
# Telegram connector (YYC-18 PR-3). Gated separately from `gateway` so
# operators who only need Discord don't pay the teloxide-core dep cost.
telegram = ["gateway", "dep:teloxide-core"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Synchronization primitives for short critical sections inside async code
# (YYC-126). parking_lot::Mutex avoids std::sync::Mutex's panic-on-poisoning
# while staying drop-in for guards that don't need to cross .await.
parking_lot = "0.12"

# Pattern-based secret redaction in provider wire-debug logs (YYC-135).
regex = "1"

# Real BPE tokenizer for context budget estimation (YYC-129). Uses
# cl100k_base — the OpenAI tokenizer for GPT-4 / GPT-3.5-turbo, which
# is also a strong cross-provider estimator (Anthropic / open-weights
# tokenizers are within a few percent on most prose / code).
tiktoken-rs = "0.11"

# HTTP / LLM API
reqwest = { version = "0.13", features = ["json", "stream"] }

# URL parsing for provider endpoint heuristics (YYC-152). Replaces a
# hand-rolled split/strip parser that mishandled IPv6 brackets and
# IPv4-mapped IPv6 addresses.
url = "2"

# Cron expression parsing for the scheduled-task runtime (YYC-17).
# Pure-Rust parser; we drive the schedule on top of tokio's own
# timer rather than pulling in `tokio-cron-scheduler` so the
# scheduler shares lifecycle + persistence with the gateway pieces.
cron = "0.16"
chrono-tz = "0.10"

# Async trait support (needed for dyn-compatible tool/provider traits)
async-trait = "0.1"

# Distributed plugin registration for the cargo-crate extension system
# (GH issue #549, ADR 0003/0004). Each extension crate calls
# `inventory::submit!` from its own compilation unit; the daemon
# iterates `inventory::iter` at startup. Pure compile-time / link-time;
# no dynamic loading.
inventory = "0.3.24"
vulcan-frontend-api = { path = "vulcan-frontend-api", version = "0.1.0" }

# Stream processing for SSE responses
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1"
toml_edit = "0.25"

# CLI + TUI
clap = { version = "4", features = ["derive"] }
# YYC-213: shell-completion script generator for the
# `vulcan completions <shell>` subcommand.
clap_complete = "4.6"
# Interactive prompts for `vulcan auth` (YYC-100). Fuzzy select +
# password input + confirm modals. Optional dep — only the auth flow
# uses it, but cheap enough to leave in default deps.
dialoguer = { version = "0.12", features = ["fuzzy-select", "password"] }
ratatui = { version = "0.30", default-features = false, features = ["termwiz", "underline-color", "all-widgets", "macros", "layout-cache"] }
termwiz = "0.23.3"
figlet-rs = "1.0.0"
tui-textarea = { version = "0.10.2", package = "tui-textarea-2", default-features = false, features = ["no-backend"] }
# YYC-287: lightweight ANSI terminal colors for styled CLI output
# (config list/show/get, doctor, trust, etc.). Zero transitive deps.
owo-colors = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace", "metrics"] }
tracing-opentelemetry = "0.32.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Zeroizing wrappers for in-memory secrets (YYC-249).
secrecy = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session IDs
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
strsim = "0.11.1"
# Cortex — self-organizing temporal graph memory for AI agents. Embedded
# library mode (no server, no external deps). Provides HNSW vector search,
# auto-linking, trust computation, briefing synthesis, temporal decay, and
# contradiction detection (YYC-264).
cortex_core = { version = "0.3.1", package = "cortex-memory-core" }
fastembed = "4.9.1"
portable-pty = "0.9.0"
# Pure-Rust git plumbing (YYC-36). Used today only for repository
# discovery — write ops dispatch through the `git` binary because gix's
# commit/push surfaces are still maturing and a hybrid keeps the tool
# semantics predictable. Plan: migrate one tool at a time.
gix = "0.83"

# Code intelligence (YYC-45). Tree-sitter parses without per-language
# servers; grammars are statically linked (binary cost is the price for
# zero runtime deps). Versions verified against crates.io latest stable.
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-json = "0.24.8"

# LSP types (YYC-46). Hand-rolled JSON-RPC framing over stdio; this
# crate just provides the structured messages so we don't reinvent
# textDocument/* bodies. Verified at crates.io latest stable.
lsp-types = "0.97"

# Workspace walker that respects .gitignore (YYC-50). Used by the
# code-graph indexer so we don't index target/, node_modules/, etc.
ignore = "0.4.25"
# Glob matching for the in-process search_files fallback (YYC-260).
globset = "0.4"
# RFC 3986 percent-encoding for query strings (YYC-253). Replaces
# the hand-rolled urlencoding() in web.rs.
percent-encoding = "2"
# CSS-selector HTML parsing for the DDG scraper (YYC-252). Replaces
# the brittle hand-rolled `.split().nth()` chain.
scraper = "0.26"
# Render HTML as plain text for web_fetch output (YYC-254). Handles
# entities, <pre>, CDATA, nested tags — all gaps in the prior
# hand-rolled state machine.
html2text = "0.17"

# Gateway daemon HTTP stack. Optional — only linked under `gateway`.
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", features = ["util"], optional = true }
subtle = { version = "2.6.1", optional = true }
# Webhook HMAC verification (Task 16). hmac 0.13 + sha2 0.11 share `digest 0.11`,
# picking matching majors avoids pulling a second copy of `digest`.
hmac = { version = "0.13.0", optional = true }
# YYC-179: sha2 is now a non-optional core dep so run-record payload
# fingerprinting works in CLI/TUI builds (not just `gateway`).
sha2 = "0.11.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "http", "model", "rustls_backend"], optional = true }
# Telegram Bot API client + types. We use teloxide-core (HTTP + types
# only) rather than full teloxide so the dispatcher framework's macro
# DSL doesn't infect the build. Long-poll + webhook are driven by our
# own gateway plumbing. Pinned to 0.13.0 (latest stable on crates.io
# 2026-04-27); `rustls` feature reuses our existing rustls TLS stack.
teloxide-core = { version = "0.13.0", default-features = false, features = ["rustls"], optional = true }
# Connection pool for the gateway daemon's SQLite store (YYC-113). Replaces
# the global Arc<Mutex<Connection>> that serialized every concurrent agent
# lane through one lock. Versions verified at crates.io latest stable.
r2d2 = { version = "0.8.10", optional = true }
r2d2_sqlite = { version = "0.33.0", optional = true }

# `http` types are shared between axum and the `Platform` trait method
# `verify_webhook`. Promoted to a direct, NON-feature-gated dep so the trait
# signature compiles in builds without the `gateway` feature too.
http = "1.4.0"

# Heap profiler for the soak binary. Optional — only linked under `bench-soak`.
dhat = { version = "0.3", optional = true }

# HDR histogram for soak-binary latency percentiles. Optional — only linked
# into the runtime crate under `bench-soak`. (Also listed in
# `[dev-dependencies]` so divan benches running under `cargo test` /
# `cargo bench` can use it without enabling the feature.)
hdrhistogram = { version = "7", optional = true }

# File watcher for daemon config auto-reload (YYC-266 Slice 0).
# Cross-platform inotify/fseventsd/ReadDirectoryChangesW.
notify = { version = "8.2.0", optional = true }

# Unix-only primitives the daemon needs: kill(pid, None) for stale-PID
# detection, signal handling. fs feature pulls in flock() if we end up
# needing it for advisory locking beyond what redb already does.
nix = { version = "0.31.2", optional = true, features = ["fs", "process", "signal"] }
throbber-widgets-tui = "0.11.0"
tachyonfx = "0.25.0"

# Workspace lint baseline (YYC-121). Conservative defaults that bias
# toward forward-leaning warnings without forcing a sprawling cleanup
# of pre-existing patterns (TUI rendering helpers with many args, test
# scaffolding that mutates a Default::default()). Tighten these as
# follow-ups; primary goal is to make new code land consistent and
# get clippy gated in CI.
[lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[lints.clippy]
# Common but noisy in this crate. Allowed at the baseline; revisit
# per-call-site as those code paths get refactored.
# YYC-275: `too_many_arguments` removed from the workspace allow.
# Existing offenders carry `#[allow(clippy::too_many_arguments)]` at
# the function so new code lights up clippy by default.
field_reassign_with_default = "allow"
doc_overindented_list_items = "allow"
# `&PathBuf` / `&String` parameters are technically slower than `&Path`
# / `&str`, but the call sites are TUI/CLI scaffolding where the cost
# is negligible. Allow until those modules get a focused pass.
ptr_arg = "allow"
# Builder-style helpers in tests (`Default::default()` then mutate)
# trip large_enum_variant in error paths; allow at baseline.
large_enum_variant = "allow"

[profile.release]
opt-level = "z"    # optimize for size
lto = true
codegen-units = 1
strip = true

# Trim debuginfo on the test profile. `line-tables-only` keeps panic/
# backtrace `file:line` resolution intact while dropping the heavyweight
# DWARF that drives debugger inspection — a lever we don't pay for in CI
# or local `cargo test`. Cuts test-binary size ~40% and cache footprint
# proportionally, which shortens link time + Swatinem cache restore on CI.
[profile.test]
debug = "line-tables-only"

[dev-dependencies]
tempfile = "3.27.0"
divan = "0.1"
hdrhistogram = "7"
tokio = { version = "1", features = ["full", "test-util"] }
# Snapshot testing for prompt builder + TUI render output (YYC follow-up).
# Pinned to crates.io latest stable; default features sufficient.
insta = "1.47.2"
# E2E binary test harness for daemon subcommand (YYC-266).
assert_cmd = "2.2.1"
predicates = "3.1.4"

[[bench]]
name = "tui_render"
harness = false

[[bench]]
name = "agent_core"
harness = false

[[bin]]
name = "vulcan-soak"
path = "benches/soak.rs"
required-features = ["bench-soak"]
