[package]
name = "vulcan-ext-input-demo"
version = "0.1.0"
edition = "2024"
description = "Sample input-intercept extension — expands `!!` to the previous user message"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"

[lib]
name = "vulcan_ext_input_demo"
path = "src/lib.rs"

[dependencies]
vulcan = { package = "vulcan-core", path = ".." }

inventory = "0.3.24"
async-trait = "0.1"
parking_lot = "0.12"
anyhow = "1"
tokio-util = { version = "0.7.18", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[package.metadata.vulcan]
id = "input-demo"
capabilities = ["input_interceptor"]
requires_user_approval = false
