[package]
name = "vulcan-ext-provider-demo"
version = "0.1.0"
edition = "2024"
description = "Provider registration dogfood Vulcan extension"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"

[lib]
name = "vulcan_ext_provider_demo"
path = "src/lib.rs"

[dependencies]
vulcan = { package = "vulcan-core", path = ".." }

inventory = "0.3.24"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
anyhow = "1"

[package.metadata.vulcan]
id = "demo"
daemon_entry = "vulcan_ext_provider_demo::ProviderDemoExtension"
capabilities = ["provider"]

[package.metadata.vulcan.provider_defaults]
model = "demo-echo"
base_url = "vulcan-extension://demo.echo"
timeout_ms = 30000
