[package]
name = "vulcan-ext-spinner-demo"
version = "0.1.0"
edition = "2024"
description = "Spinner status-widget demo Vulcan extension"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"

[lib]
name = "vulcan_ext_spinner_demo"
path = "src/lib.rs"

[dependencies]
vulcan = { package = "vulcan-core", path = ".." }
vulcan-frontend-api = { path = "../vulcan-frontend-api", optional = true }

inventory = "0.3.24"
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["time", "macros", "rt"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

[features]
default = []
tui = ["dep:vulcan-frontend-api"]

[package.metadata.vulcan]
id = "spinner-demo"
daemon_entry = "vulcan_ext_spinner_demo::SpinnerDemoExtension"
capabilities = ["tool_provider"]
requires_frontend = ["status_widgets"]
