[package]
name = "vulcan-tui"
version = "0.1.0"
edition = "2024"
description = "Vulcan TUI frontend binary"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"

[dependencies]
anyhow = "1"
vulcan = { package = "vulcan-core", path = ".." }
vulcan-frontend-api = { path = "../vulcan-frontend-api" }
vulcan-ext-todo = { path = "../vulcan-ext-todo", features = ["tui"] }
vulcan-ext-spinner-demo = { path = "../vulcan-ext-spinner-demo", features = ["tui"] }
vulcan-ext-snake = { path = "../vulcan-ext-snake" }
