[package]
name = "vulcan"
version = "0.1.0"
edition = "2024"
description = "Vulcan daemon binary"
authors = ["Colin Hanway"]
license = "MIT"
repository = "https://github.com/yycholla/vulcan"
default-run = "vulcan"

[features]
default = ["daemon"]
# Re-export of the vulcan-core daemon feature. Keep the bin's feature
# set in lockstep with the lib's so `cargo run --features ...` here
# composes naturally.
daemon = ["vulcan/daemon"]
gateway = ["vulcan/gateway"]
telegram = ["vulcan/telegram"]

[dependencies]
# In-source name is `vulcan` (lib name) but the package is published
# as `vulcan-core`. The `package =` rename keeps the existing
# `use vulcan::*` imports compiling.
vulcan = { package = "vulcan-core", path = ".." }

# GH issue #549: link the auto-commit dogfood extension so its
# `inventory::submit!` site is visible at daemon startup. Without a
# `use` the linker can drop unreferenced static items; the explicit
# dep keeps the registration alive.
vulcan-ext-auto-commit = { path = "../vulcan-ext-auto-commit" }
vulcan-ext-todo = { path = "../vulcan-ext-todo", features = ["tui"] }
vulcan-ext-spinner-demo = { path = "../vulcan-ext-spinner-demo", features = ["tui"] }
# GH issue #557: input-intercept dogfood extension; same `extern crate`
# anchoring rationale as auto-commit.
vulcan-ext-input-demo = { path = "../vulcan-ext-input-demo" }
vulcan-ext-provider-demo = { path = "../vulcan-ext-provider-demo" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"
